Details
-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
None
-
6.10.0 FF
-
-
8cc1e98ca (dev), 22dca3396 (6.9), c33f4d545 (tqtc/lts-6.8)
-
DaVinci 119
Description
src/qdoc/qdoc/CMakeFiles/qdoc.dir/src/qdoc/qmlcodemarker.cpp.o -c /home/qt/work/qt/qttools/src/qdoc/qdoc/src/qdoc/qmlcodemarker.cpp In file included from /home/qt/work/qt/qttools/src/qdoc/qdoc/src/qdoc/qmlcodemarker.cpp:10: /home/qt/work/qt/qttools/src/qdoc/qdoc/src/qdoc/qmlmarkupvisitor.h:78:16: error: ‘QQmlJS::AST::Expression’ has not been declared 78 | bool visit(QQmlJS::AST::Expression *) override; | ^~~~~~ /home/qt/work/qt/qttools/src/qdoc/qdoc/src/qdoc/qmlmarkupvisitor.h:78:10: error: ‘bool QmlMarkupVisitor::visit(int*)’ marked ‘override’, but does not override 78 | bool visit(QQmlJS::AST::Expression *) override; | ^~~~~ Sccache command failed, re-try calling build tool directly In file included from /home/qt/work/qt/qttools/src/qdoc/qdoc/src/qdoc/qmlcodemarker.cpp:10: /home/qt/work/qt/qttools/src/qdoc/qdoc/src/qdoc/qmlmarkupvisitor.h:78:16: error: ‘QQmlJS::AST::Expression’ has not been declared 78 | bool visit(QQmlJS::AST::Expression *) override; | ^~~~~~ /home/qt/work/qt/qttools/src/qdoc/qdoc/src/qdoc/qmlmarkupvisitor.h:78:10: error: ‘bool QmlMarkupVisitor::visit(int*)’ marked ‘override’, but does not override 78 | bool visit(QQmlJS::AST::Expression *) override; | ^~~~~
Details: https://testresults.qt.io/coin/integration/qt/qttools/tasks/1747568912
Tested changes (refs/builds/qtci/dev/1747568049):
https://codereview.qt-project.org/c/qt/qttools/+/646404/2 Update dependencies on 'dev' in qt/qttools