Adjust to rename of QQmlJS::AST::Expression to CommaExpression

Follow up on qtdeclarative:138889eab042fda149e13ed1d2c86d543da003d0.

Task-number: QTBUG-136963
Pick-to: 6.8 6.5
Change-Id: If8e2d2b528c70576634f962a6bd0c5f0dde6d5d4
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 8cc1e98caa435f3a2d244ee0b8cadcef6360850f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>